--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     },
     "dependencies": {
         "@icon-park/vue-next": "^1.4.2",
+        "body-parser": "^1.20.3",
         "cors": "^2.8.5",
         "express": "^4.21.2",
         "http-proxy-middleware": "^3.0.3",
         "mime": "^4.0.6",
         "pinia": "^2.3.1",
         "vue": "^3.5.13",
-        "vue-router": "^4.5.0"
+        "vue-router": "^4.5.0",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@tsconfig/node22": "^22.0.0",
+        "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/node": "^22.13.1",
