--- a/package.json
+++ b/package.json
@@ -16,25 +16,28 @@
     },
     "dependencies": {
         "@icon-park/vue-next": "^1.4.2",
-        "@prisma/client": "^6.3.1",
-        "better-sqlite3": "^11.8.1",
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
         "express": "^4.21.2",
         "http-proxy-middleware": "^3.0.3",
         "mime": "^4.0.6",
         "pinia": "^2.3.1",
+        "reflect-metadata": "^0.2.2",
+        "sequelize": "^6.37.5",
+        "sequelize-typescript": "^2.1.6",
+        "sqlite3": "^5.1.7",
         "vue": "^3.5.13",
         "vue-router": "^4.5.0",
         "zod": "^3.24.2"
     },
     "devDependencies": {
         "@tsconfig/node22": "^22.0.0",
-        "@types/better-sqlite3": "^7.6.12",
         "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/node": "^22.13.1",
+        "@types/sequelize": "^4.28.20",
+        "@types/validator": "^13.12.2",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vitejs/plugin-vue-jsx": "^4.1.1",
         "@vue/tsconfig": "^0.7.0",
